docs/style.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
/* Righteous and Lobster are both fun choices */

:root {
  --primary-font: 'Poppins', sans-serif;
  --dark-blue: rgb(46, 39, 107);
  --light-blue: rgba(134, 141, 204, 0.5);
}

* {
  box-sizing: border-box;
}

body {
  background-color: var(--dark-blue);
  color: white;
  font-family: var(--primary-font);
  font-size: 1.25rem;
  height: 100%;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

h1 {
  font-family: 'Righteous', sans-serif;
  font-size: 3.5rem;
  margin-top: 0;
}

.main {
  position: relative;
  flex-direction: column;
}

.footer {
  position: fixed;
  bottom: 0;
  background-color: var(--dark-blue);
  width: 100%;
  height: 50px;
}

#prompt {
  position: relative;
  top: 10vh;
}

.search {
  position: absolute;
  top: 20vh;
  height: 50px;
  transition: transform 0.3s ease;
}

.search.active.expand {
  position: relative;
  transform: translate(-210%, -260%);
}

.search input {
  background-color: #fff;
  border: 0;
  font-size: 18px;
  padding: 15px;
  height: 50px;
  width: 50px;
  transition: width 0.3s ease;
}

.search.active input {
  width: 230px;
}

.search button {
  background-color: #fff;
  border: 0;
  cursor: pointer;
  font-size: 24px;
  position: absolute;
  top: 0;
  left: 0;
  height: 50px;
  width: 50px;
  transition: transform 0.3s ease;
}

.search.active button {
  transform: translateX(198px);
}

.search button:focus,
.search input:focus {
  outline: none;
}

.search-results {
  list-style-type: none;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 10vh;
}

.card {
  position: relative;
  padding: .75rem;
  margin: 1rem;
  background-color: var(--light-blue);
  border-radius: 5px;
  width: 220px;
  height: 350px;
  animation: fade-in 0.5s linear;
  text-overflow: ellipsis;
  overflow: hidden;
}

.card h4 {
  margin: 0;
}

.card img {
  width: 100%;
  height: 80%;
  border-radius: 5px;
}

.btn {
  font-family: var(--primary-font);
  font-size: 1.25rem;
  border: none;
  border-radius: 5px;
  background-color: var(--light-blue);
  color: #fff;
  padding: .25rem .75rem;
  margin: 0.25rem;
  transition: background-color 0.3s ease;
}

.btn:hover {
  background-color:rgba(158, 113, 203, 1.0);
}

.btn:focus {
  outline: none;
}

#nominations {
  position: absolute;
  right: 10px;
  top: 0;
  text-align: left;
  transform: translateY(-35%);
}

.list {
  list-style-type: none;
  text-align: left;
  transform: translateY(-200%);
  transition: transform 0.3s ease;
}

.list.active {
  transform: translateY(0%);
}

.banner {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  width: 100vw;
  height: 5vh;
  background-color: rgb(254, 254, 0);
  color: var(--light-blue);
  font-weight: bold;
  font-size: 1.75rem;
  transform: translateY(-100%);
  transition: transform 0.3s linear;
  z-index: 5;
}

.banner.show {
  transform: translateY(0%);
}

@keyframes slide-in {
  from {
    transform: translateY(-100%);
  }

  to {
    transform: translateY(0%);
  }
}

@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@media screen and (min-width: 1300px) {
  .main {
    width: 1300px;
    margin: 0 auto;
  }
}

